Having issue where bullets in About#utilized-software not showing up. Using spans as a temporary fix for now.

--- a/mixit_frontend/src/css/About.css
+++ b/mixit_frontend/src/css/About.css
@@ -55,9 +55,11 @@
     text-decoration:underline;
 }
 .method-list{
-    list-style-type: inside;
+    display: list-item;
+    color:black;
 }
 .method-list li{
     display: list-item;
+    color:black;
     list-style-type: circle;
 }
